load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "gateway.go",
        "loader.go",
        "metrics.go",
        "pathmonitor.go",
        "watcher.go",
    ],
    importpath = "github.com/scionproto/scion/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//gateway/control:go_default_library",
        "//gateway/control/grpc:go_default_library",
        "//gateway/dataplane:go_default_library",
        "//gateway/pathhealth:go_default_library",
        "//gateway/pathhealth/policies:go_default_library",
        "//gateway/routemgr:go_default_library",
        "//gateway/routing:go_default_library",
        "//gateway/xnet:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/daemon:go_default_library",
        "//pkg/grpc:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/metrics:go_default_library",
        "//pkg/metrics/v2:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/proto/gateway:go_default_library",
        "//pkg/snet:go_default_library",
        "//pkg/snet/metrics:go_default_library",
        "//pkg/snet/squic:go_default_library",
        "//private/app/appnet:go_default_library",
        "//private/periodic:go_default_library",
        "//private/service:go_default_library",
        "//private/svc:go_default_library",
        "//private/worker:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_quic_go_quic_go//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["loader_test.go"],
    deps = [
        ":go_default_library",
        "//gateway/control:go_default_library",
        "//gateway/control/mock_control:go_default_library",
        "//gateway/mock_gateway:go_default_library",
        "//gateway/routing:go_default_library",
        "//pkg/addr:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
