load("//tools/lint:go.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "connector.go",
        "dataplane.go",
        "metrics.go",
        "svc.go",
    ],
    importpath = "github.com/scionproto/scion/router",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/drkey:go_default_library",
        "//pkg/experimental/epic:go_default_library",
        "//pkg/log:go_default_library",
        "//pkg/private/common:go_default_library",
        "//pkg/private/serrors:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/scrypto:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/slayers/path/empty:go_default_library",
        "//pkg/slayers/path/epic:go_default_library",
        "//pkg/slayers/path/onehop:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//pkg/spao:go_default_library",
        "//private/topology:go_default_library",
        "//private/underlay/conn:go_default_library",
        "//router/bfd:go_default_library",
        "//router/control:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "dataplane_test.go",
        "export_test.go",
        "svc_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/addr:go_default_library",
        "//pkg/experimental/epic:go_default_library",
        "//pkg/private/util:go_default_library",
        "//pkg/private/xtest:go_default_library",
        "//pkg/scrypto:go_default_library",
        "//pkg/slayers:go_default_library",
        "//pkg/slayers/path:go_default_library",
        "//pkg/slayers/path/empty:go_default_library",
        "//pkg/slayers/path/epic:go_default_library",
        "//pkg/slayers/path/onehop:go_default_library",
        "//pkg/slayers/path/scion:go_default_library",
        "//private/topology:go_default_library",
        "//private/underlay/conn:go_default_library",
        "//router/control:go_default_library",
        "//router/mock_router:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_google_gopacket//:go_default_library",
        "@com_github_google_gopacket//layers:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_x_net//ipv4:go_default_library",
    ],
)
