load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "flags.go",
        "plugin.go",
    ],
    importpath = "github.com/scionproto/scion/scion-pki",
    visibility = ["//visibility:public"],
    deps = ["@com_github_spf13_pflag//:go_default_library"],
)
