load("@pip3_deps//:requirements.bzl", "requirement")
load("//tools/lint:go.bzl", "go_library")

sh_binary(
    name = "docker_ip",
    srcs = ["docker-ip"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "gomocks",
    srcs = ["gomocks.py"],
    main = "gomocks.py",
    deps = [
        requirement("plumbum"),
    ],
)

py_binary(
    name = "topogen",
    srcs = ["topogen.py"],
    data = [
        "//scion-pki/cmd/scion-pki",
        "//tools:docker_ip",
    ],
    main = "topogen.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/topology:py_default_library",
        "@bazel_tools//tools/python/runfiles",
        requirement("toml"),
        requirement("plumbum"),
        requirement("pyyaml"),
    ],
)
