load("@rules_python//python:defs.bzl", "py_binary")
load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

exports_files([
    "gzip_exec_interp",
])

sh_binary(
    name = "docker_ip",
    srcs = ["docker-ip"],
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "await_connectivity",
    srcs = ["await-connectivity"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "gomocks",
    srcs = ["gomocks.py"],
    main = "gomocks.py",
    deps = [
        requirement("plumbum"),
    ],
)

py_console_script_binary(
    name = "supervisord",
    pkg = requirement("supervisor"),
    visibility = ["//visibility:public"],
    deps = [
        requirement("supervisor-wildcards"),
    ],
)

py_console_script_binary(
    name = "supervisorctl",
    pkg = requirement("supervisor"),
    visibility = ["//visibility:public"],
    deps = [
        requirement("supervisor-wildcards"),
    ],
)

py_binary(
    name = "topogen",
    srcs = ["topogen.py"],
    data = [
        "//scion-pki/cmd/scion-pki",
        "//tools:docker_ip",
    ],
    main = "topogen.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/topology:py_default_library",
        "@bazel_tools//tools/python/runfiles",
        requirement("toml"),
        requirement("plumbum"),
        requirement("pyyaml"),
    ],
)

py_binary(
    name = "topodot",
    srcs = ["topodot.py"],
    data = [
    ],
    main = "topodot.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/topology:py_default_library",
        "@bazel_tools//tools/python/runfiles",
        requirement("plumbum"),
    ],
)

py_binary(
    name = "set_ipv6_addr",
    srcs = ["set_ipv6_addr.py"],
    data = [
    ],
    main = "set_ipv6_addr.py",
    python_version = "PY3",
    srcs_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [
        "//tools/topology:py_default_library",
        "@bazel_tools//tools/python/runfiles",
    ],
)
