load("//python/topology:topology.bzl", "topology")
# gazelle:ignore

filegroup(
    name = "default",
    srcs = ["default.topo"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "tiny.topo",
        "tiny4.topo",
        "wide.topo",
    ],
)

topology(
    name = "tiny_gen",
    src = "tiny.topo",
)
