# gazelle:ignore

filegroup(
    name = "default",
    srcs = ["default.topo"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "big",
    srcs = ["testdata/big.topo"],
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "default-no-peers.topo",
        "tiny.topo",
        "tiny4.topo",
    ],
)
