load("//acceptance/common:topogen.bzl", "topogen_test")

topogen_test(
    name = "test",
    src = "test.py",
    args = ["--executable=end2end_integration:$(location //tools/end2end_integration)"],
    data = ["//tools/end2end_integration"],
    topo = "//acceptance/app_vs_endhost_br_dispatch/testdata:topology.topo",
)
