load("//acceptance/common:topogen.bzl", "topogen_test_underlays")

topogen_test_underlays(
    name = "test",
    src = "test.py",
    args = [
        "--executable",
        "end2end_integration:$(location //tools/end2end_integration)",
    ],
    data = ["//tools/end2end_integration"],
    topo = "//topology:tiny4.topo",
)
