load("@pip3_deps//:requirements.bzl", "requirement")
load("//lint:py.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "base",
    srcs = ["base.py"],
    deps = [
        requirement("plumbum"),
        "docker",
        "log",
        "scion",
    ],
)

py_library(
    name = "docker",
    srcs = ["docker.py"],
    deps = [
        requirement("plumbum"),
    ],
)

py_library(
    name = "go",
    srcs = ["go.py"],
)

py_library(
    name = "log",
    srcs = ["log.py"],
)

py_library(
    name = "scion",
    srcs = ["scion.py"],
    deps = [
        requirement("plumbum"),
        requirement("toml"),
        "log",
        "//python/lib:scion_addr",
    ],
)

py_test(
    name = "scion_test",
    srcs = [
        "scion_test.py",
    ],
    deps = [
        "scion",
    ],
)
