load("//acceptance/common:topogen.bzl", "topogen_test")

# Test with standalone daemon (embedded daemon using topology files) - default
topogen_test(
    name = "test_standalone",
    src = "test.py",
    args = [
        "--executable=end2end_integration:$(location //tools/end2end_integration)",
    ],
    data = ["//tools/end2end_integration"],
    topo = "//topology:tiny.topo",
)

# Test with remote daemon (connecting to sciond via gRPC)
topogen_test(
    name = "test_daemon",
    src = "test.py",
    args = [
        "--executable=end2end_integration:$(location //tools/end2end_integration)",
        "--use-daemon",
    ],
    data = ["//tools/end2end_integration"],
    topo = "//topology:tiny.topo",
)
