load("//acceptance/common:topogen.bzl", "topogen_test")

topogen_test(
    name = "test",
    src = "test.py",
    data = [
        "//acceptance/hidden_paths/testdata:hp_groups_as2_as5.yml",
        "//acceptance/hidden_paths/testdata:hp_groups_as3.yml",
        "//acceptance/hidden_paths/testdata:hp_groups_as4.yml",
    ],
    topo = "//acceptance/hidden_paths/testdata:topology.topo",
)
