load("//acceptance/common:raw.bzl", "raw_test")
load("@com_github_scionproto_scion_python_deps//:requirements.bzl", "requirement")

exports_files(
    [
        "conf",
        "test.py",
        "conf/router.toml",
        "conf/topology.json",
        "conf/keys/master0.key",
        "conf/keys/master1.key",
    ],
    visibility = ["//visibility:public"],
)

args = [
    "--executable",
    "brload:$(location //acceptance/router_benchmark/brload:brload)",
    "--docker-image=$(location //docker:router.tarball)",
]

data = [
    ":conf",
    "//docker:router.tarball",
    "//acceptance/router_benchmark/brload:brload",
]

raw_test(
    name = "test",
    src = "test.py",
    args = args,
    data = data,
    homedir = "$(rootpath //docker:router.tarball)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)
