load("@scion_python_deps//:requirements.bzl", "requirement")
load("//acceptance/common:raw.bzl", "raw_test")
load("//tools/lint:py.bzl", "py_binary", "py_library")

exports_files(
    [
        "conf",
        "test.py",
        "conf/router.toml",
        "conf/topology.json",
        "conf/keys/master0.key",
        "conf/keys/master1.key",
    ],
    visibility = ["//visibility:public"],
)

args = [
    "--executable",
    "brload:$(location //acceptance/router_benchmark/brload:brload)",
    "--executable",
    "coremark:$(location //tools/coremark:coremark)",
    "--executable",
    "mmbm:$(location //tools/mmbm:mmbm)",
    "--docker-image=$(location //docker:router.tarball)",
]

data = [
    ":conf",
    "//docker:router.tarball",
    "//acceptance/router_benchmark/brload:brload",
    "//tools/coremark:coremark",
    "//tools/mmbm:mmbm",
]

raw_test(
    name = "test_afxdp",
    src = "test.py",
    args = args + [
        "--underlay",
        "afxdp",
    ],
    data = data,
    homedir = "$(rootpath //docker:router.tarball)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
    deps = ["benchmarklib"],
)

raw_test(
    name = "test_inet",
    src = "test.py",
    args = args + [
        "--underlay",
        "inet",
    ],
    data = data,
    homedir = "$(rootpath //docker:router.tarball)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
    deps = ["benchmarklib"],
)

test_suite(
    name = "test",
    tests = [
        ":test_afxdp",
        ":test_inet",
    ],
)

py_library(
    name = "benchmarklib",
    srcs = ["benchmarklib.py"],
)

py_binary(
    name = "benchmark",
    srcs = ["benchmark.py"],
    args = [
        "--brload",
        "$(location //acceptance/router_benchmark/brload:brload)",
    ],
    data = data,
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = [
        "benchmarklib",
        requirement("plumbum"),
    ],
)
