load("//acceptance/common:raw.bzl", "raw_test")

exports_files([
    "conf",
    "test.py",
    "pause.tar",
])

args = [
    "--executable",
    "braccept:$(location //tools/braccept)",
    "--container-loader",
    "router:latest#$(location //docker:router)",
    "--pause_tar",
    "$(location //acceptance/router_multi:pause.tar)",
]

data = [
    "pause.tar",
    ":conf",
    ":router",
    "//tools/braccept",
]

raw_test(
    name = "test_bfd",
    src = "test.py",
    args = args + [
        "--bfd",
    ],
    data = data,
    homedir = "$(rootpath :router)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)

raw_test(
    name = "test_nobfd",
    src = "test.py",
    args = args,
    data = data,
    homedir = "$(rootpath :router)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)
