load("//acceptance/common:raw.bzl", "raw_test")

exports_files([
    "conf",
    "test.py",
    "pause.tar",
])

args = [
    "--executable",
    "braccept:$(location //tools/braccept)",
    "--docker-image",
    "$(location //docker:router.tarball)",
    "--pause_tar",
    "$(location //acceptance/router_multi:pause.tar)",
]

data = [
    "pause.tar",
    ":conf",
    "//docker:router.tarball",
    "//tools/braccept",
]

raw_test(
    name = "test_bfd_afxdp",
    src = "test.py",
    args = args + ["--bfd", "--underlay", "afxdp"],
    data = data,
    homedir = "$(rootpath :conf)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)

raw_test(
    name = "test_bfd_inet",
    src = "test.py",
    args = args + ["--bfd", "--underlay", "inet"],
    data = data,
    homedir = "$(rootpath :conf)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)

raw_test(
    name = "test_nobfd_afxdp",
    src = "test.py",
    args = args + ["--underlay", "afxdp"],
    data = data,
    homedir = "$(rootpath :conf)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)

raw_test(
    name = "test_nobfd_inet",
    src = "test.py",
    args = args + ["--underlay", "inet"],
    data = data,
    homedir = "$(rootpath :conf)",
    # This test uses sudo and accesses /var/run/netns.
    local = True,
)

test_suite(
    name = "test_bfd",
    tests = [":test_bfd_afxdp", ":test_bfd_inet"],
)

test_suite(
    name = "test_nobfd",
    tests = [":test_nobfd_afxdp", ":test_nobfd_inet"],
)
